Create table of edges

--- a/src/main/webapp/resources/css/style-calculate.css
+++ b/src/main/webapp/resources/css/style-calculate.css
@@ -1,1 +1,35 @@
 #content .nav-tabs>li>a{border-color:transparent #EAEAEA;margin:0}#content .nav-tabs>li.active>a{border-color:transparent #EAEAEA}#content .nav-tabs>li:first-child>a{border-color:transparent #EAEAEA transparent transparent}#content .nav-tabs>li>a:hover{border-color:transparent transparent #EAEAEA}#content .nav li a{text-transform:uppercase;font-weight:700;outline:0}#content .nav{background:#f2f2f2}#content .tab-content{background:#fff;padding:20px}.control-panel{padding-bottom:10px}.control-panel>a{display:inline-block;vertical-align:top;border:2px solid #63C3D0;color:#63C3D0;margin:5px 0;padding:5px 7px;border-radius:3px;font-weight:700;outline:0;background:#fff}.control-panel>a:active,.control-panel>a:link,.control-panel>a:visited{text-decoration:none}.control-panel>a.active,.control-panel>a:hover{background:#63C3D0;color:#fff;text-decoration:none}.table{margin-top:20px;background:#fff}.table>tbody>tr>td{padding:0;text-align:center}.table>thead>tr{background:#63C3D0;text-align:center;color:#fff}.table>thead>tr>th{text-align:center;vertical-align:middle}.table>th{position:relative}.table th>div{display:inline-block}.table th>div a{display:block;line-height:5px}input{width:100%;border:none}.delete{color:red}table.view tbody tr:nth-child(2n){background:rgba(99,195,208,.1)}table tr{height:22px}#catalog,#network{width:100%;display:table;background:#fff;padding:20px 0}.default-tabs{min-width:100px;width:1px}.default-tabs ul{margin:0;padding:0}.default-tabs ul li{display:block;margin:0;padding:0;border:none}.default-tabs ul li a{display:block;background:#fff;padding:10px 15px;text-transform:uppercase;font-size:14px;font-weight:700;outline:0}.default-tabs ul li a:focus,.default-tabs ul li a:hover,.default-tabs ul li.active a{color:#63C3D0;text-decoration:none;background:#F6F6F6}.default-list-tabs{background:#F6F6F6;padding:0 15px}
+.example-file{
+	background:#fff;
+	padding:15px;
+	margin:10px 0;
+	font-family: "Courier New";
+}
+.id{
+	display:none;
+}
+.input-file{
+	position:relative;
+	overflow:hidden;
+	font-size:14px;
+	height:20px;
+	line-height:20px;
+}
+.input-file > button{
+	float:right;
+	width:25px;
+	height:100%;
+}
+.input-file > div{
+	padding-left:10px;
+}
+.input-file input{
+	position:absolute;
+	left:0;
+	top:0;
+	width:100%;
+	height:100%;
+	transform:scale(20);
+	opacity:0;
+	cursor:pointer;
+}
